hphp/hack/test/ifc/check/governed_calls.php.exp
=== IFC analysis results for governed_calls.php
File "governed_calls.php", line 44, characters 3-13:
Context-implicit policy leaks into `PUBLIC` via `pc`. (Typing[4380])
  File "governed_calls.php", line 19, characters 3-17:
  Another program point contributing to the leakage
  File "governed_calls.php", line 6, characters 14-23:
  Leakage sink
File "governed_calls.php", line 38, characters 3-12:
Context-implicit policy leaks into `PUBLIC` via `pc`. (Typing[4380])
  File "governed_calls.php", line 19, characters 3-17:
  Another program point contributing to the leakage
  File "governed_calls.php", line 6, characters 14-23:
  Leakage sink
File "governed_calls.php", line 38, characters 3-12:
Context-implicit policy leaks into `PUBLIC` via `$x`. (Typing[4380])
  File "governed_calls.php", line 19, characters 3-17:
  Another program point contributing to the leakage
  File "governed_calls.php", line 6, characters 14-23:
  Leakage sink
